--- a/WTAOW/characters/ali.html
+++ b/WTAOW/characters/ali.html
@@ -45,11 +45,12 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html">Socials</a>
-                                <a href = "..">Home</a>
-                                <a href = "characters/" class = "active">Characters</a>
-                                <a href = "Fanart/">Fanart</a>
-                                <a href = "Fanart/" style="margin-right: 15%;">Fanart</a>
+                                <a tabindex="1" href = "../socials.html">Socials</a>
+                                <a tabindex="1" href = ".." >Home</a>
+                                <a tabindex="1" href = "."  class = "active">Characters</a>
+                                <a tabindex="1" href = "../Fanart">Fanart</a>
+                                <a tabindex="1" href = "../C&C">C&C</a>
+                                <a tabindex="1" href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
 
@@ -91,7 +92,7 @@
                                         <tr>
                                                 <td class = "category">Voice Actor:</td>
                                                 <td class = "data">
-                                                        <a href="../VAs/Dove">Dove</a>
+                                                        <a href="../C&C/dove.html">Dove</a>
                                                 </td>
                                         </tr>
                                 </table>
@@ -107,8 +108,7 @@
                 <br>
         </body>
         <script>
-                imgTxtAlignment()
+                imgTxtAlignment();
                 moveUp("characterPage")
-                SCRIPT
         </script>
 </html>
