--- a/WTAOW/characters/angelbot_model_3-2.html
+++ b/WTAOW/characters/angelbot_model_3-2.html
@@ -45,11 +45,12 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html">Socials</a>
-                                <a href = "..">Home</a>
-                                <a href = "characters/" class = "active">Characters</a>
-                                <a href = "Fanart/">Fanart</a>
-                                <a href = "Fanart/" style="margin-right: 15%;">Fanart</a>
+                                <a tabindex="1" href = "../socials.html">Socials</a>
+                                <a tabindex="1" href = ".." >Home</a>
+                                <a tabindex="1" href = "."  class = "active">Characters</a>
+                                <a tabindex="1" href = "../Fanart">Fanart</a>
+                                <a tabindex="1" href = "../C&C">C&C</a>
+                                <a tabindex="1" href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
 
@@ -91,14 +92,14 @@
                                         <tr>
                                                 <td class = "category">Voice Actor:</td>
                                                 <td class = "data">
-                                                        <a href="../VAs/Bloomaboo">Bloomaboo</a>
+                                                        <a href="../C&C/bloomaboo.html">Bloomaboo</a>
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>Abilities</h3>
-                                <p></p>
+                                <p>Angelbot Model 3.2 has the ability to scan all living matter and add it to the Angelbot database. As the Angelbot Model 3.0 was designed to excavate, it has the ability to turn its arms into a variety of tools, including saws, lasers, and shovels. Angelbot Model 3.2 can also fly, and has lightweight metal to help it do so.</p>
                                 <h3>Personality</h3>
-                                <p></p>
+                                <p>The Angelbot Model 3.0 line was designed with your safety in mind, and with wild animals roaming the caverns, it has been programmed to automatically exterminate threats registered in the Angelbot database. It may appear scary to you, but it is all designed with your safety in mind.</p>
                         </div>
                 </div>
 
@@ -107,8 +108,7 @@
                 <br>
         </body>
         <script>
-                imgTxtAlignment()
+                imgTxtAlignment();
                 moveUp("characterPage")
-                SCRIPT
         </script>
 </html>
