--- a/WTAOW/characters/angelbot_model_x.html
+++ b/WTAOW/characters/angelbot_model_x.html
@@ -45,11 +45,12 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html">Socials</a>
-                                <a href = "..">Home</a>
-                                <a href = "characters/" class = "active">Characters</a>
-                                <a href = "Fanart/">Fanart</a>
-                                <a href = "Fanart/" style="margin-right: 15%;">Fanart</a>
+                                <a tabindex="1" href = "../socials.html">Socials</a>
+                                <a tabindex="1" href = ".." >Home</a>
+                                <a tabindex="1" href = "."  class = "active">Characters</a>
+                                <a tabindex="1" href = "../Fanart">Fanart</a>
+                                <a tabindex="1" href = "../C&C">C&C</a>
+                                <a tabindex="1" href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
 
@@ -91,14 +92,14 @@
                                         <tr>
                                                 <td class = "category">Voice Actor:</td>
                                                 <td class = "data">
-                                                        <a href="../VAs//!/">/!/</a>
+                                                        <a href="../C&C/onyx.html">Onyx</a>
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>Abilities</h3>
-                                <p></p>
+                                <p>Angelbot Model X was designed to end wars as quickly as possible, so that our brave soldiers could return home. It has many capabilities, including bulletproof metal, built-in ammunition, and a rudimentary AI capable of evaluating situations and strategizing.</p>
                                 <h3>Personality</h3>
-                                <p></p>
+                                <p>Angelbot Model X was designed to help with foreign war efforts while preserving the lives of our great soldiers and saving our citizens from seeing the horrors of war. It was designed to scare enemy troops and break enemy formations.</p>
                         </div>
                 </div>
 
@@ -107,8 +108,7 @@
                 <br>
         </body>
         <script>
-                imgTxtAlignment()
+                imgTxtAlignment();
                 moveUp("characterPage")
-                SCRIPT
         </script>
 </html>
