--- a/WTAOW/characters/character-template.html
+++ b/WTAOW/characters/character-template.html
@@ -97,7 +97,7 @@
                                         <tr>
                                                 <td class = "category">Voice Actor:</td>
                                                 <td class = "data">
-                                                        <a href="../vas/VA.html">VA</a>
+                                                        <a href="../C&C/VA.html">VA</a>
                                                 </td>
                                         </tr>
                                 </table>
