--- a/WTAOW/characters/index.html
+++ b/WTAOW/characters/index.html
@@ -46,7 +46,10 @@
                         <div class = "links">
                                 <a href = "../socials.html">Socials</a>
                                 <a href = "..">Home</a>
-                                <a href = "." class = "active">Characters</a>
+                                <a href = "characters/" class = "active">Characters</a>
+                                <a href = "../Fanart/">Fanart</a>
+                                <a href = "../C&C/">VAs</a>
+                                <a href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
 
