--- a/WTAOW/characters/maria.html
+++ b/WTAOW/characters/maria.html
@@ -45,11 +45,12 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html">Socials</a>
-                                <a href = "..">Home</a>
-                                <a href = "characters/" class = "active">Characters</a>
-                                <a href = "Fanart/">Fanart</a>
-                                <a href = "Fanart/" style="margin-right: 15%;">Fanart</a>
+                                <a tabindex="1" href = "../socials.html">Socials</a>
+                                <a tabindex="1" href = ".." >Home</a>
+                                <a tabindex="1" href = "."  class = "active">Characters</a>
+                                <a tabindex="1" href = "../Fanart">Fanart</a>
+                                <a tabindex="1" href = "../C&C">C&C</a>
+                                <a tabindex="1" href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
 
@@ -91,14 +92,14 @@
                                         <tr>
                                                 <td class = "category">Voice Actor:</td>
                                                 <td class = "data">
-                                                        <a href="../VAs/Jadesgarden">Jadesgarden</a>
+                                                        <a href="../C&C/jadesgarden.html">Jadesgarden</a>
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>Abilities</h3>
-                                <p></p>
+                                <p>Maria's full set of abilities are unknown, but she has the eye model of an Angelbot Model X and the wing model of the failed Angelbot Model 3.3 prototype</p>
                                 <h3>Personality</h3>
-                                <p></p>
+                                <p>Maria is kind and sweet until she needs to be angry.</p>
                         </div>
                 </div>
 
@@ -107,8 +108,7 @@
                 <br>
         </body>
         <script>
-                imgTxtAlignment()
+                imgTxtAlignment();
                 moveUp("characterPage")
-                SCRIPT
         </script>
 </html>
