--- a/WTAOW/characters/milo.html
+++ b/WTAOW/characters/milo.html
@@ -45,11 +45,12 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html">Socials</a>
-                                <a href = "..">Home</a>
-                                <a href = "characters/" class = "active">Characters</a>
-                                <a href = "Fanart/">Fanart</a>
-                                <a href = "Fanart/" style="margin-right: 15%;">Fanart</a>
+                                <a tabindex="1" href = "../socials.html">Socials</a>
+                                <a tabindex="1" href = ".." >Home</a>
+                                <a tabindex="1" href = "."  class = "active">Characters</a>
+                                <a tabindex="1" href = "../Fanart">Fanart</a>
+                                <a tabindex="1" href = "../C&C">C&C</a>
+                                <a tabindex="1" href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
 
@@ -91,14 +92,14 @@
                                         <tr>
                                                 <td class = "category">Voice Actor:</td>
                                                 <td class = "data">
-                                                        <a href="../VAs/Tookie">Tookie</a>
+                                                        <a href="../C&C/tookie.html">Tookie</a>
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>Abilities</h3>
-                                <p></p>
+                                <p>Milo has an excellent sense of hearing</p>
                                 <h3>Personality</h3>
-                                <p></p>
+                                <p>Milo is calm and collected. He tends not to fly off the handle, but sometimes people test his patience. He's generally friendly, and tries to give everyone a chance. Even those who don't deserve it.</p>
                         </div>
                 </div>
 
@@ -107,8 +108,7 @@
                 <br>
         </body>
         <script>
-                imgTxtAlignment()
+                imgTxtAlignment();
                 moveUp("characterPage")
-                SCRIPT
         </script>
 </html>
