--- a/WTAOW/characters/sophia.html
+++ b/WTAOW/characters/sophia.html
@@ -45,11 +45,12 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html">Socials</a>
-                                <a href = "..">Home</a>
-                                <a href = "characters/" class = "active">Characters</a>
-                                <a href = "Fanart/">Fanart</a>
-                                <a href = "Fanart/" style="margin-right: 15%;">Fanart</a>
+                                <a tabindex="1" href = "../socials.html">Socials</a>
+                                <a tabindex="1" href = ".." >Home</a>
+                                <a tabindex="1" href = "."  class = "active">Characters</a>
+                                <a tabindex="1" href = "../Fanart">Fanart</a>
+                                <a tabindex="1" href = "../C&C">C&C</a>
+                                <a tabindex="1" href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
 
@@ -91,14 +92,14 @@
                                         <tr>
                                                 <td class = "category">Voice Actor:</td>
                                                 <td class = "data">
-                                                        <a href="../VAs/Jsalt">Jsalt</a>
+                                                        <a href="../C&C/jsalt.html">Jsalt</a>
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>Abilities</h3>
-                                <p>None</p>
+                                <p>Sophia has no abilities.</p>
                                 <h3>Personality</h3>
-                                <p></p>
+                                <p>Sophia is a sweet but sheltered kid. She can be overbearing or pushy at times, but she doesn't mean any harm, and will apologize profusely if she actually upsets you. She can be oblivious of her own actions, but very perceptive of others.</p>
                         </div>
                 </div>
 
@@ -107,8 +108,7 @@
                 <br>
         </body>
         <script>
-                imgTxtAlignment()
+                imgTxtAlignment();
                 moveUp("characterPage")
-                SCRIPT
         </script>
 </html>
