--- a/WTAOW/characters/xero.html
+++ b/WTAOW/characters/xero.html
@@ -45,11 +45,12 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html">Socials</a>
-                                <a href = "..">Home</a>
-                                <a href = "characters/" class = "active">Characters</a>
-                                <a href = "Fanart/">Fanart</a>
-                                <a href = "Fanart/" style="margin-right: 15%;">Fanart</a>
+                                <a tabindex="1" href = "../socials.html">Socials</a>
+                                <a tabindex="1" href = ".." >Home</a>
+                                <a tabindex="1" href = "."  class = "active">Characters</a>
+                                <a tabindex="1" href = "../Fanart">Fanart</a>
+                                <a tabindex="1" href = "../C&C">C&C</a>
+                                <a tabindex="1" href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
 
@@ -91,14 +92,16 @@
                                         <tr>
                                                 <td class = "category">Voice Actor:</td>
                                                 <td class = "data">
-                                                        <a href="../VAs//!/">/!/</a>
+                                                        <a href="../C&C/fireboa.html">Fireboa</a>
+                                                        <a href="../C&C/kirachi.html">Kirachi</a>
+                                                        <a href="../C&C/aurora.html">Aurora</a>
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>Abilities</h3>
-                                <p>ABILITIES</p>
+                                <p>Xero has the ability to see what's on your mind. More than that, though, xe has the uncanny ability to perfectly imitate you.</p>
                                 <h3>Personality</h3>
-                                <p>PERSONALITY</p>
+                                <p>Xero is a slippery one.</p>
                         </div>
                 </div>
 
@@ -107,8 +110,7 @@
                 <br>
         </body>
         <script>
-                imgTxtAlignment()
+                imgTxtAlignment();
                 moveUp("characterPage")
-                schrodingersXeroPicture('imageColumn')
         </script>
 </html>
