--- a/WTAOW/credits.html
+++ b/WTAOW/credits.html
@@ -16,8 +16,11 @@
                 <div class = "top">
                         <div class = "links">
                                 <a href = "socials.html">Socials</a>
-                                <a href = ".">Home</a>
-                                <a href = "video-feed.html"><p>Videos</p></a>
+                                <a href = "." >Home</a>
+                                <a href = "characters/">Characters</a>
+                                <a href = "Fanart/">Fanart</a>
+                                <a href = "VAs/">VAs</a>
+                                <a href = """ style="margin-right: 15%;" class = "active">Credits</a>
                         </div>
                 </div>
 
