--- a/Personal Projects/HTML/The List/index.html
+++ b/Personal Projects/HTML/The List/index.html
@@ -26,7 +26,7 @@
                 // Your web app's Firebase configuration
                 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
                 const firebaseConfig = {
-                apiKey: "AIzaSyAg63Q6pT8XDWoKLnzMltyhkD0Aecpttgs",
+                apiKey: "key",
                 authDomain: "the-list-ac5a6.firebaseapp.com",
                 projectId: "the-list-ac5a6",
                 storageBucket: "the-list-ac5a6.firebasestorage.app",
